<resources>
    <string name="app_name">Conversion app</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Main Activity -->
    <string name="unit_title">Choose a unit.</string>
    <string name="unit_prompt">Choose unit</string>
    <string name="equals_symbol">=</string>
    <string name="change_units_Button">Change units</string>

    <!-- Strings related to Settings -->
    <string name="units_of_measurement">Units of Measurement</string>
    <string name="length">Length</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="mass">Mass</string>
    <string name="confirm">Confirm</string>

    <string-array name="length_array">
        <item>Kilometre</item>
        <item>Metre</item>
        <item>Centimetre</item>
        <item>Millimetre</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
    </string-array>

    <string-array name="speed_array">
        <item>Kilometres per hour</item>
        <item>Metres per second</item>
        <item>Miles per hour</item>
    </string-array>

    <string-array name="temperature_array">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="mass_array">
        <item>Tonne</item>
        <item>Kilogram</item>
        <item>Gram</item>
        <item>Milligram</item>

    </string-array>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>
