<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kyle.app.conversionapp.SettingsActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/units_of_measurement"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/unit_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:padding="10sp"
                android:text="@string/length"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:padding="10sp"
                android:text="@string/speed"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:padding="10sp"
                android:text="@string/temperature"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioMass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:padding="10sp"
                android:text="@string/mass"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Button"
        android:text="@string/confirm" />

</LinearLayout>
