<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyle.conversionapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unit_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="50sp"
            android:padding="5sp"
            android:text="@string/length"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Button"
            android:text="@string/change_units_Button_text" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        tools:text="input 1" />

    <Spinner
        android:id="@+id/spinner_from"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:entries="@array/length_array"
        android:padding="5sp"
        android:prompt="@string/unit_prompt"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equals_symbol"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        tools:text="input 2" />

    <Spinner
        android:id="@+id/spinner_to"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:entries="@array/length_array"
        android:padding="5sp"
        android:prompt="@string/unit_prompt"
        android:spinnerMode="dropdown" />

</LinearLayout>

